M:88886 [!] Bug: jQuyer lightbox widget has small z-index. Fixed.
git-svn-id: svn://svn.crtdev.local/repo/xlite/main@2287 194c3f1c-803d-db11-9c9e-000e0c8563f3

--- a/test/skins/drupal/en/modules/DetailedImages/css/jquery.lightbox-0.5.css
+++ b/test/skins/drupal/en/modules/DetailedImages/css/jquery.lightbox-0.5.css
@@ -24,7 +24,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	z-index: 100;
+	z-index: 2000;
 	text-align: center;
 	line-height: 0;
 }
